# weather-cli

./: Cargo.toml  Makefile.toml  README.md
.github/workflows/: ci.yml
src/: config.rs  date.rs  main.rs  provider.rs  provider_registry.rs  selector.rs  utils.rs
src/provider/: accuweather.rs  openweather.rs  weatherapi.rs
