[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.6", features = [ "derive" ]}
dirs = "5.0.1"
light-ini = "0.3.0"
reqwest = "0.11.22"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.8.1"
